--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,11 @@
             <artifactId>spring-web</artifactId>
             <version>6.1.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
