--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,12 +13,11 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
+permissions: write-all
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
