--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 docker-compose.yml
+.env
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -31,6 +32,7 @@ docker-compose.yml
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
 
 ### VS Code ###
 .vscode/
