--- a/java-backend/Dockerfile
+++ b/java-backend/Dockerfile
@@ -13,12 +13,17 @@
 ## Command to run the application
 #ENTRYPOINT ["java", "-jar", "FrameDataMain.jar"]
 
+# Stage 1: Build the application with Maven
 FROM maven:3.8.4-openjdk-17-slim AS build
-COPY pom.xml ./
-COPY src src
-RUN mvn clean install -DskipTests
-FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY --from=build target/*.jar FrameDataMain.jar
+COPY pom.xml ./
+COPY src ./src
+RUN mvn clean install -DskipTests
+
+# Stage 2: Create the runtime image
+FROM openjdk:17-slim
+WORKDIR /app
+COPY --from=build /app/target/*.jar FrameDataMain.jar
+
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","FrameDataMain.jar"]
+ENTRYPOINT ["java", "-jar", "FrameDataMain.jar"]
